[tool.poetry]
name = "support-chatbot"
version = "0.1.0"
description = "A chatbot built using Rasa."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"  # Ensure compatibility with rasa-sdk
rasa = ">3.8,<3.11"  # Update to the latest compatible version of rasa
rasa-sdk = ">3.8,<3.11"  # Ensure both versions are compatible
SQLAlchemy = "^1.3.24"
PyJWT = "^1.7.1"
absl-py = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
