[tool.poetry]
name = "support-chatbot"
version = "0.1.0"
description = "A chatbot built using Rasa."
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"  # Python version compatibility constraint for the project
rasa = "^3.6.21"  # Specify the Rasa version you're using
rasa-sdk = "^3.6.2"  # Ensure compatibility with Rasa
SQLAlchemy = "^1.3.24"
PyJWT = "2.4.0"
absl-py = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
# Make sure poetry is being used to install the package
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
